tests/errors/semantic/blocking/classes.py
# pylint: disable=missing-function-docstring, missing-module-docstring

class MyClass:
    def __init__(self : 'MyClass', param1 : 'int|float'):
        print(param1)
